[package]
name = "predict_price_lstm"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.46.0", features = ["lazy", 
                                            "strings", 
                                            "temporal", 
                                            "rolling_window"] }
bincode = "2.0.1"
chrono = "0.4.34"
burn = { version = "0.17.0", features = ["tch", "ndarray"] }
burn-core = "0.17.0"
burn-autodiff = "0.17.0"
burn-train = "0.17.0"
burn-tch = "0.17.0"
burn-ndarray = "0.17.0"
thiserror = "2.0.11"
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
ndarray = "0.16.1"
rayon = "1.7.0"
num-traits = "0.2.19"
rand = "0.9.1"
polars-utils = "0.46.0"

[build-dependencies]
built = "0.7.0"
