[package]
name = "ClawFoxyVision"
version = "0.2.0"
edition = "2021"
description = "Advanced financial time series forecasting library using LSTM, GRU, and CNN-LSTM neural networks for price prediction with Rust and Burn"
license = "MIT"
authors = ["ClawFoxyVision Team"]
readme = "README.md"
repository = "https://github.com/rustic-ml/ClawFoxyVision"
homepage = "https://github.com/rustic-ml/ClawFoxyVision"
documentation = "https://docs.rs/ClawFoxyVision"
keywords = ["time-series", "forecasting", "lstm", "neural-networks", "price-prediction"]
categories = ["science", "mathematics", "algorithms", "finance"]
# Exclude files and directories from being included in the published package
exclude = [
    "src/test/*",
    "examples/*",
    "target/*",
    "models/*",
    "Cargo.lock",
    ".gitignore",
    "ClawFoxyVision_250px.png",
    "ClawFoxyVision.png",
    "cursor-extensions.txt",
    "rustfmt.toml",
    "run_experiment.sh",
    "run_model.sh"
]

[dependencies]
polars = { version = "0.47.1", features = ["lazy", 
                                            "strings", 
                                            "temporal", 
                                            "rolling_window"] }
bincode = "2.0.1"
chrono = "0.4.34"
burn = { version = "0.17.0", features = ["tch", "ndarray", "train"] }
burn-core = "0.17.0"
burn-autodiff = "0.17.0"
burn-train = "0.17.0"
burn-tch = "0.17.0"
burn-ndarray = "0.17.0"
thiserror = "2.0.11"
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
ndarray = "0.16.1"
rayon = "1.7.0"
num-traits = "0.2.19"
rand = "0.9.1"
polars-utils = "0.47.1"
rustalib = "1.0.8"
log = "0.4.27"

[build-dependencies]
built = "0.8.0"
